--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@astrojs/check": "^0.7.0",
     "@astrojs/tailwind": "^5.1.0",
+    "@vercel/speed-insights": "^1.0.10",
     "astro": "^4.8.6",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.4.5"
